# flask_message

./: .flaskenv  .gitignore  pyproject.toml  requirements.txt
app/: __init__.py  configs.py
app/blueprints/main/: routers.py
app/blueprints/main/index/: forms.py  views.py
app/models/: sayhello_db.py
app/templates/: _base.html  _navbar.html
app/templates/main/: index.html
app/utils/: get_request_ip.py  inject_prepend.py
settings/: settings_demo.yaml
